packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/expected/webpack.txt
ERROR in ./error/sass/index.scss (./error/sass/index.scss.webpack[javascript/auto]!=!../../../../../node_modules/<PNPM_INNER>/css-loader/dist/cjs.js!../../../../../node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js!./error/sass/index.scss)
Module build failed (from ../../../../../node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js):
Expected identifier.
  ╷
1 │ ..foo {}
  │  ^
  ╵
  <ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss <LINE:COLUMN>  root stylesheet

ERROR in ./error/sass/index.scss
Module build failed (from ../../src/loader.js):
HookWebpackError: Module build failed (from ../../../../../node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js):
Expected identifier.
  ╷
1 │ ..foo {}
  │  ^
  ╵
  <ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss <LINE:COLUMN>  root stylesheet
    at tryRunOrWebpackError (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/HookWebpackError.js:<LINE:COLUMN>)
    at __webpack_require_module__ (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>)
    at __webpack_require__ (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>)
    at <ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>
    at symbolIterator (<ROOT>/node_modules/<PNPM_INNER>/neo-async/async.js:<LINE:COLUMN>)
    at done (<ROOT>/node_modules/<PNPM_INNER>/neo-async/async.js:<LINE:COLUMN>)
    at Hook.eval [as callAsync] (eval at create (<ROOT>/node_modules/<PNPM_INNER>/tapable/lib/HookCodeFactory.js:<LINE:COLUMN>), <anonymous>:<LINE:COLUMN>)
    at Hook.CALL_ASYNC_DELEGATE [as _callAsync] (<ROOT>/node_modules/<PNPM_INNER>/tapable/lib/Hook.js:<LINE:COLUMN>)
    at <ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>
    at symbolIterator (<ROOT>/node_modules/<PNPM_INNER>/neo-async/async.js:<LINE:COLUMN>)
-- inner error --
Error: Module build failed (from ../../../../../node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js):
Expected identifier.
  ╷
1 │ ..foo {}
  │  ^
  ╵
  <ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss <LINE:COLUMN>  root stylesheet
    at Object.<anonymous> (<ROOT>/node_modules/<PNPM_INNER>/css-loader/dist/cjs.js!<ROOT>/node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js!<ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss:<LINE:COLUMN>)
    at <ROOT>/node_modules/<PNPM_INNER>/webpack/lib/javascript/JavascriptModulesPlugin.js:<LINE:COLUMN>
    at Hook.eval (eval at create (<ROOT>/node_modules/<PNPM_INNER>/tapable/lib/HookCodeFactory.js:<LINE:COLUMN>), <anonymous>:<LINE:COLUMN>)
    at Hook.CALL_DELEGATE [as _call] (<ROOT>/node_modules/<PNPM_INNER>/tapable/lib/Hook.js:<LINE:COLUMN>)
    at <ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>
    at tryRunOrWebpackError (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/HookWebpackError.js:<LINE:COLUMN>)
    at __webpack_require_module__ (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>)
    at __webpack_require__ (<ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>)
    at <ROOT>/node_modules/<PNPM_INNER>/webpack/lib/Compilation.js:<LINE:COLUMN>
    at symbolIterator (<ROOT>/node_modules/<PNPM_INNER>/neo-async/async.js:<LINE:COLUMN>)

Generated code for <ROOT>/node_modules/<PNPM_INNER>/css-loader/dist/cjs.js!<ROOT>/node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js!<ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss
1 | throw new Error("Module build failed (from ../../../../../node_modules/<PNPM_INNER>/sass-loader/dist/cjs.js):\nExpected identifier.\n  ╷\n1 │ ..foo {}\n  │  ^\n  ╵\n  <ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss <LINE:COLUMN>  root stylesheet");
